--- a/changes.txt
+++ b/changes.txt
@@ -16,14 +16,13 @@ Indra Sutriadi (indra.sutriadi@gmail.com)
 
 Localisation contributors :
 Germany: Tobias Zeumer (tzeumer@verweisungsform.de)
-???: Jhon Urrego Felipe Mejia (ingenierofelipeurrego@gmail.com)
 Thai: Prasitichai เรารักในหลวง
 Bengali: A. K. M. Nurul Alam
 Persian: Mohammad Javad Mansourzadeh
 Arabic: Rasyid Ridho
-Malay: ???
+Malay: Jerry Mohd. Arif
 Brazilian Portuguese: ???
-Spain: ???
+Spain: Jhon Urrego Felipe Mejia (ingenierofelipeurrego@gmail.com)
 
 THANKS TO OUR USERS AND COMMUNITIES, YOU ARE DEVELOPERS TOO!
 
