--- a/lib/lang/locale/ar_AR/LC_MESSAGES/messages.po
+++ b/lib/lang/locale/ar_AR/LC_MESSAGES/messages.po
@@ -363,7 +363,7 @@ msgstr "تم تحديث بيانات الناشر"
 
 #: ucs/admin/modules/master_file/publisher.php:67
 msgid "PUBLISHER Data FAILED to Updated. Please Contact System Administrator"
-msgstr "بمديريث بيانات الناشر. رجاء الاتصال بنظام البيانات"
+msgstr "تحديث بينات الناشر فشلت. رجاء الاتصال بمدير النظام"
 
 #: ucs/admin/modules/master_file/publisher.php:74
 msgid "New Publisher Data Successfully Saved"
@@ -405,7 +405,7 @@ msgstr "اضافة الناشر الجديد"
 
 #: ucs/admin/modules/master_file/publisher.php:118
 msgid "Publisher List"
-msgstr "الناشر التفسيلى"
+msgstr "قائمة الناشر"
 
 #: ucs/admin/modules/master_file/publisher.php:140
 #: ucs/admin/modules/master_file/index.php:144
@@ -439,7 +439,7 @@ msgstr "اسم الناشر"
 
 #: ucs/admin/modules/master_file/publisher.php:164
 msgid "You are going to edit publisher data"
-msgstr ""
+msgstr " ستقوم بتعديل بيانات الناشر"
 
 #: ucs/admin/modules/master_file/publisher.php:164
 #: ucs/admin/modules/master_file/publisher.php:179
@@ -480,7 +480,7 @@ msgstr "آخر تحديث"
 #: ucs/admin/modules/master_file/place.php:200
 #: ucs/admin/modules/bibliography/index.php:446
 msgid "Found <strong>{result->num_rows}</strong> from your keywords"
-msgstr ""
+msgstr "وجد <strong>{result->num_rows}</strong> من كلمات بحثك"
 
 #: ucs/admin/modules/master_file/index.php:42
 #: ucs/admin/modules/master_file/index.php:135
