--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-سينيان نظام إدارة المكتبات مفتوح المصدر النسخة السابعة من نظام Slims
+(Slims)سينيان نظام إدارة المكتبات مفتوح المصدر النسخة السابعة من نظام
 تحت رخصة جنو العمومية  النسخة 3 نرجوا قراءة الرخصة العربية 
